--- a/src/Components/pages/Login/Login.css
+++ b/src/Components/pages/Login/Login.css
@@ -26,6 +26,9 @@ p {
     border-radius: 50%;
     margin: auto;
 }
+/* form {
+    margin-left: 0px;
+  } */
 
 .full-form {
     width: 40%;
@@ -89,6 +92,19 @@ form .dotted {
 }
 
 form a {
+    width: 90%;
+    height: 55px;
+    text-align: center;
+    background: black;
+    color: aliceblue;
+    border-radius: 9px;
+    line-height: 55px;
+    text-decoration: none;
+    margin: auto;
+    margin-left: 29px;
+    margin-bottom: 11px;
+}
+.googlebtn {
     width: 90%;
     height: 55px;
     text-align: center;
