--- a/src/App.css
+++ b/src/App.css
@@ -969,14 +969,14 @@ form ul .drop-menu {
   /* margin-top: 19px; */
 }
 
-.btn-submit-search {
+/* .btn-submit-search {
   padding: 7px;
   background-color: black;
   border-bottom-right-radius: 6px;
   border-top-right-radius: 6px;
   border-bottom-left-radius: 6px;
   border-top-left-radius: 6px;
-}
+} */
 
 /* Dropdown */
 
